[package]
name = "crowdfunding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "1.10.0"

[dev-dependencies]
solana-program-test = "1.10.5"
solana-sdk = "1.10.5"

[lib]
name = "crowdsource"
crate-type = ["cdylib", "lib"]

